--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Objective: Using SVM to build and train a model using human cell records, and classify cells to whether the samples are benign or malignant.\n",
+    "Objective: build and train a model using human cell records, and classify cells to whether the samples are benign or malignant.\n",
     "\n",
     "\n",
     "The SVM algorithm: SVM works by mapping data to a high-dimensional feature space so that data points can be categorized, even when the data are not otherwise linearly separable. A separator between the categories is found, then the data is transformed in such a way that the separator could be drawn as a hyperplane. Following this, characteristics of new data can be used to predict the group to which a new record should belong."
